--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,10 @@
           <groupId>org.apache.hive</groupId>
           <artifactId>hive-exec</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.hive</groupId>
+          <artifactId>hive-jdbc</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
